<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/resultText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp" android:textColor="@color/black" android:background="@color/white"/>

    <Button
        android:id="@+id/zeroButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/resultText"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/zero"
        android:width="60dp" />

    <Button
        android:id="@+id/oneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/zeroButton"
        android:layout_alignLeft="@+id/zeroButton"
        android:text="@string/one"
        android:width="60dp" />

    <Button
        android:id="@+id/twoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/oneButton"
        android:layout_alignBottom="@+id/oneButton"
        android:layout_toRightOf="@+id/oneButton"
        android:text="@string/two"
        android:width="60dp" />

    <Button
        android:id="@+id/threeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/twoButton"
        android:layout_alignBottom="@+id/twoButton"
        android:layout_toRightOf="@+id/twoButton"
        android:text="@string/three"
        android:width="60dp" />

    <Button
        android:id="@+id/fourButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/oneButton"
        android:layout_alignLeft="@+id/oneButton"
        android:text="@string/four"
        android:width="60dp" />

    <Button
        android:id="@+id/fiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fourButton"
        android:layout_alignBottom="@+id/fourButton"
        android:layout_toRightOf="@+id/oneButton"
        android:text="@string/five"
        android:width="60dp" />

    <Button
        android:id="@+id/sixButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fiveButton"
        android:layout_toRightOf="@+id/fiveButton"
        android:text="@string/six"
        android:width="60dp" />

    <Button
        android:id="@+id/sevenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fourButton"
        android:layout_alignLeft="@+id/fourButton"
        android:text="@string/seven"
        android:width="60dp" />

    <Button
        android:id="@+id/eightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sevenButton"
        android:layout_toRightOf="@+id/sevenButton"
        android:text="@string/eight"
        android:width="60dp" />

    <Button
        android:id="@+id/nineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/eightButton"
        android:layout_toRightOf="@+id/eightButton"
        android:text="@string/nine"
        android:width="60dp" />

    <Button
        android:id="@+id/resultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/threeButton"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/equal"
        android:width="60dp" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resultButton"
        android:layout_alignRight="@+id/resultButton"
        android:text="@string/plus"
        android:width="60dp" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/resultText"
        android:layout_below="@+id/resultText"
        android:text="@string/clear"
        android:width="60dp" />

</RelativeLayout>